projects/mamba/tests/cpython/fixtures/type-strict/param_types/errors/socket_htons_rejects_str_argument.py
# /// script
# requires-python = ">=3.12"
# dependencies = []
#
# [tool.mamba]
# bucket = "type-strict"
# lib = "param_types"
# dimension = "errors"
# case = "socket_htons_rejects_str_argument"
# subject = "socket.htons"
# kind = "mechanical"
# xfail = ""
# mem_carveout = ""
# source = ""
# status = "filled"
# ///
# mamba-strict-type: TypeError
"""socket.htons: socket_htons_rejects_str_argument (errors)."""
import socket

try:
    result = socket.htons("80")
    print("no_typeerror:", repr(result))
except TypeError as e:
    print("typeerror:", type(e).__name__, str(e)[:80])
